tests/NormalTests/paczka1/fuzzy1/98049633.err
Error in line 2: oiW7 A820 64,9
Error in line 4: IiW S470 68,8
Error in line 6: IiW A363 58,5
Error in line 11: S470 A820 53,5
Error in line 15: S470 A563 32,5
Error in line 3: oiW7 A363 91,3
Error in line 35: AhCsneIn A363 21,33
